changed domain logic in backend